--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pstar-pro",
   "version": "0.1.0",
-  "homepage": "https://baronalloway.github.io/pstar-pro",
+  "homepage": "http://pstar.baron.fyi/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
